Update index.html for SEO and content changes

--- a/index.html
+++ b/index.html
@@ -1,216 +1,148 @@
-<! DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
 
-  <title>Sam Trainer — Treinamento Personalizado</title>
+  <title>Natação: um esporte essencial à vida — Sam Trainer</title>
 
-  <!-- SEO -->
-  <meta name="description" content="Sam Trainer — Conteúdos sobre corrida, esportes, natação e educação física.  Treinamento personalizado, saúde e desempenho físico.">
-  <meta name="keywords" content="corrida, esportes, natação, educação física, treinamento personalizado, saúde">
+  <meta name="description" content="A natação é um esporte fundamental para a saúde física e mental. Conheça seus benefícios, habilidades básicas e importância ao longo da vida.">
+  <meta name="keywords" content="natação, saúde, esporte, educação física, habilidades aquáticas, bem-estar">
   <meta name="author" content="Sam Trainer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Open Graph -->
-  <meta property="og: title" content="Sam Trainer — Treinamento Personalizado">
-  <meta property="og: description" content="Conteúdos sobre esporte, saúde e desempenho físico. ">
-  <meta property="og:type" content="website">
+  <!-- SEO social -->
+  <meta property="og:title" content="Natação: um esporte essencial à vida">
+  <meta property="og:description" content="Entenda por que a natação é uma habilidade fundamental para o ser humano e seus benefícios para corpo e mente.">
+  <meta property="og:type" content="article">
 
   <style>
-    : root{
-      --bg:  #0f172a;
-      --header-bg: #1e293b;
-      --section-bg: #020617;
-      --text:  #e5e7eb;
+    :root{
+      --bg: #0f172a;
+      --text: #e5e7eb;
       --accent: #38bdf8;
-      --link:  #22d3ee;
+      --link: #22d3ee;
     }
 
     body {
       background-color: var(--bg);
       color: var(--text);
       font-family: Arial, Helvetica, sans-serif;
-      margin: 0;
+      max-width: 800px;
+      margin: auto;
+      padding: 40px 20px;
       line-height: 1.8;
-    }
-
-    header {
-      background-color: var(--header-bg);
-      padding: 30px 20px;
-      text-align: center;
     }
 
     header h1 {
       color: var(--accent);
-      margin: 0;
       font-size: 2rem;
+      margin-bottom: 10px;
     }
 
-    nav {
-      margin-top: 20px;
+    header p {
+      font-size: 0.95rem;
+      opacity: 0.8;
     }
 
-    nav a {
-      margin: 0 10px;
-      color: var(--link);
-      font-weight: bold;
-      text-decoration: none;
+    article h2 {
+      color: var(--accent);
+      margin-top: 30px;
     }
 
-    nav a:hover,
-    nav a:focus {
-      text-decoration: underline;
-      outline: none;
-    }
-
-    main {
-      padding: 40px 20px;
-      max-width: 960px;
-      margin: 0 auto;
-    }
-
-    section {
-      background-color: var(--section-bg);
-      padding: 30px;
-      border-radius: 14px;
-      margin-bottom:  40px;
-    }
-
-    section h2 {
-      color:  var(--accent);
-      margin-top: 0;
-    }
-
-    p {
-      text-align: justify;
-      margin-bottom: 1. 2rem;
-    }
-
-    ul {
-      padding-left: 20px;
-    }
-
-    li {
-      margin-bottom: 8px;
+    blockquote {
+      border-left: 4px solid var(--accent);
+      padding-left: 15px;
+      margin: 30px 0;
+      font-style: italic;
+      opacity: 0.9;
     }
 
     a {
       color: var(--link);
-    }
-
-    iframe {
-      width: 100%;
-      height: 750px;
-      border: none;
-      border-radius: 10px;
+      text-decoration: none;
+      font-weight: bold;
     }
 
     footer {
-      text-align: center;
-      padding: 20px;
+      margin-top: 50px;
       font-size: 0.9rem;
-      background-color: var(--header-bg);
+      opacity: 0.8;
     }
   </style>
 </head>
 
 <body>
 
-<header role="banner">
-  <h1>Sam Trainer</h1>
-  <p>Treinamento Personalizado</p>
+  <header>
+    <h1>Natação: um esporte essencial à vida</h1>
+    <p>Por Sam Trainer • Educação Física e Saúde</p>
+  </header>
 
-  <nav role="navigation" aria-label="Menu principal">
-    <a href="#artigos">Artigos</a>
-    <a href="#corrida">Corrida</a>
-    <a href="#educacao">Educação Física</a>
-    <a href="#esportes">Esportes</a>
-    <a href="#natacao">Natação</a>
-    <a href="#contato">Contato</a>
-    <a href="#sobre">Sobre Mim</a>
-  </nav>
-</header>
+  <main role="main">
+    <article>
 
-<main role="main">
+      <p>
+        A natação é amplamente reconhecida como um dos esportes mais completos
+        e essenciais à vida humana. Diferente de habilidades inatas como respirar
+        ou caminhar, o ser humano não nasce sabendo nadar. Assim como a leitura
+        e a escrita, as habilidades aquáticas precisam ser aprendidas, praticadas
+        e aperfeiçoadas ao longo do tempo.
+      </p>
 
-  <section id="artigos">
-    <h2>Artigos</h2>
-    <ul>
-      <li><a href="artigos/natacao. html">A importância da natação para a vida humana</a></li>
-      <li><a href="#corrida">Corrida: saúde, desempenho e constância</a></li>
-      <li><a href="#educacao">Educação Física e formação integral</a></li>
-      <li><a href="#esportes">O papel dos esportes no desenvolvimento humano</a></li>
-    </ul>
-  </section>
+      <p>
+        O processo de aprendizagem da natação envolve a adaptação progressiva
+        ao meio líquido, desenvolvendo movimentos e habilidades fundamentais,
+        como o controle da respiração, a flutuação, as batidas de perna
+        e a coordenação dos braços. Esses elementos formam a base para a segurança
+        aquática e para a execução eficiente dos diferentes estilos de nado.
+      </p>
 
-  <section id="corrida">
-    <h2>Corrida</h2>
-    <p>
-      A corrida é uma das formas mais naturais de locomoção do ser humano e uma
-      prática acessível para a promoção da saúde física e mental.
-    </p>
-    <p>
-      Melhora o sistema cardiorrespiratório, fortalece músculos e auxilia no
-      controle do estresse e da ansiedade. 
-    </p>
-  </section>
+      <h2>Benefícios físicos e fisiológicos</h2>
 
-  <section id="educacao">
-    <h2>Educação Física</h2>
-    <p>
-      A Educação Física estuda o movimento humano e contribui para a formação
-      integral do indivíduo ao longo da vida.
-    </p>
-  </section>
+      <p>
+        Do ponto de vista fisiológico, a natação proporciona importantes benefícios
+        cardiorrespiratórios, contribuindo para o aumento da resistência aeróbica
+        e para a melhora da capacidade pulmonar. O trabalho muscular realizado
+        dentro da água ocorre de forma global, promovendo ganho de força,
+        aumento do tônus muscular e menor impacto sobre as articulações,
+        quando comparado a outras modalidades esportivas.
+      </p>
 
-  <section id="esportes">
-    <h2>Esportes</h2>
-    <p>
-      O esporte desenvolve habilidades físicas, sociais e emocionais, promovendo
-      saúde, disciplina e bem-estar.
-    </p>
-  </section>
+      <p>
+        Além disso, a prática regular de exercícios físicos, como a natação,
+        estimula a liberação de neurotransmissores responsáveis pela regulação
+        da química cerebral, favorecendo a redução do estresse, da ansiedade
+        e a melhora do bem-estar psicológico.
+      </p>
 
-  <section id="natacao">
-    <h2>Natação</h2>
-    <p>
-      A natação é um dos esportes essenciais à vida humana.  As habilidades
-      natatórias são aprendidas com o tempo e proporcionam segurança e saúde.
-    </p>
-    <p>
-      <em>"Todo homem culto deve saber ler, escrever e nadar." — Platão</em>
-    </p>
-    <p>
-      <a href="artigos/natacao.html"><strong>Leia o artigo completo →</strong></a>
-    </p>
-  </section>
+      <h2>Natação e saúde mental</h2>
 
-  <section id="contato">
-    <h2>Contato</h2>
-    <p>
-      Inscreva-se na newsletter ou envie dúvidas, críticas e sugestões. 
-    </p>
+      <p>
+        Os benefícios da natação não se restringem apenas ao corpo.
+        O ambiente aquático proporciona sensações de relaxamento,
+        concentração e consciência corporal, fatores que contribuem
+        diretamente para a saúde mental e emocional do praticante.
+      </p>
 
-    <iframe
-      src="https://docs.google.com/forms/d/e/1FAIpQLSftvJTykmm2Wtih825hrZMu9B4X-AUivEI_vIxUzjVF_9fPLA/viewform?embedded=true"
-      loading="lazy">
-      Carregando…
-    </iframe>
-  </section>
+      <blockquote>
+        “Todo homem culto deve saber ler, escrever e nadar.”  
+        <br>— Platão
+      </blockquote>
 
-  <section id="sobre">
-    <h2>Sobre Mim</h2>
-    <p>
-      Sou o Sam Trainer.  Compartilho conhecimento sobre esporte, saúde e
-      treinamento físico de forma acessível e consciente.
-    </p>
-  </section>
+      <p>
+        Essa célebre frase atribuída a Platão reforça a ideia de que a natação
+        deve ser compreendida não apenas como uma atividade esportiva,
+        mas como uma habilidade essencial para a vida, a autonomia
+        e a formação integral do ser humano.
+      </p>
 
-</main>
+    </article>
+  </main>
 
-<footer>
-  © 2026 — Sam Trainer • GitHub Pages
-</footer>
+  <footer>
+    <p><a href="../index.html">← Voltar para o site</a></p>
+    <p>© 2026 — Sam Trainer</p>
+  </footer>
 
 </body>
 </html>
